change: name package

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
-Package: VMSkit
+Package: SISESATools
 Type: Package
 Title: What the package does (short line)
 Version: 1.0
-Date: 2014-12-02
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
+Date: 2016-03-16
+Author: Pablo Marin Abanto
+Maintainer: Pablo Marin Abanto <Boosterpablo@gmail.com>
 Description: More about what it does (maybe more than one line)
 License: What license is it under?
-Packaged: 2015-02-11 20:27:15 UTC; pelagico05
+Packaged: ...
 LazyData: TRUE
 ByteCompile: TRUE
